tests/pos/inlineUnit.scala
object Test {
  inline def foo: Int = 1

  def test: Unit = {
    foo
  }
}
