tests/neg/wildcard-imports/A.scala
package test

object A:
  def foo: Int = 0
